--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express-session": "^1.16.1",
     "google-auth-library": "^3.1.2",
     "pg": "^7.10.0",
+    "react-redux": "^7.0.2",
+    "redux": "^4.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
