--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "client": "cd client && npm run start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -18,6 +19,9 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "chai": "^4.2.0",
+    "concurrently": "^4.0.1",
+    "mocha": "^6.1.4",
+    "mockery": "^2.1.0"
   }
 }
