--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pg": "^7.10.0",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
+    "rewire": "^4.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
