--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "test": "mocha",
-    "dbsetup":"node db/manage/setup.js",
+    "dbsetup": "node db/manage/setup.js",
     "dbclear": "node db/manage/clear.js",
     "dbreset": "npm run dbclear && npm run dbsetup"
   },
@@ -19,13 +19,15 @@
     "pg": "^7.10.0",
     "react-redux": "^7.0.2",
     "redux": "^4.0.1",
-    "rewire": "^4.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "concurrently": "^4.0.1",
     "mocha": "^6.1.4",
-    "mockery": "^2.1.0"
+    "mockery": "^2.1.0",
+    "rewire": "^4.0.1",
+    "supertest": "^4.0.2",
+    "supertest-session": "^4.0.0"
   }
 }
