--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "async-chess-client",
   "version": "0.1.0",
   "dependencies": {
+    "chess.js": "^0.10.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-login": "^5.0.4",
