--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "client": "cd client && npm run start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "test": "mocha",
     "dbsetup": "node db/manage/setup.js",
     "dbclear": "node db/manage/clear.js",
